welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: not found: value Z
if (litMessage() == Z) {
                    ^